--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "build": "chmod +x ./node_modules/.bin/tsc && tsc -p tsconfig.json",
     "start": "node build/infrastructure/server/index.js",
     "test": "echo \"no tests configured\" && exit 0",
-    "seed": "tsx src/infrastructure/db/seed.ts"
+    "seed": "tsx src/infrastructure/db/seed.ts",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
